--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -188,7 +188,7 @@
     "close_delete_account": "إغلاق \/ حذف الحساب",
     "account_delete_msg": "إذا قمت بحذف حسابك ، فلن تتمكن بعد الآن من الحصول على معلومات حول الوظائف المتطابقة ، وأصحاب العمل التاليين ، والتنبيه الوظيفي ، والوظائف المختصرة والمزيد. سيتم استبعادك من جميع خدمات التطبيق",
     "phone_email": "الهاتف والبريد الإلكتروني",
-    "companies": "شركات",
+    "companies": "الشركات ",
     "candidates": "مرشحين",
     "what_our_people_says": "ماذا يقول شعبنا",
     "candidate_title": "كن مرشحًا",
@@ -199,7 +199,7 @@
     "subscribe": "الإشتراك",
     "live_job": "وظيفة حية",
     "details": "تفاصيل",
-    "home": "مسكن",
+    "home": "الرئيسية",
     "share_this_profile": "مشاركة الملف التعريفي",
     "pinterest": "بينتيريست",
     "contact_information": "معلومات التواصل",
@@ -223,7 +223,9 @@
     "contact_title": "عنوان الاتصال",
     "contact_sub_title": "العنوان الفرعي للاتصال",
     "contact_description": "وصف جهة الاتصال",
-    "email_support": "دعم البريد الإلكتروني",
+    "email_support": "البريد الالكترونى للدعم  ",
+    "find_job_that_suits_your_interest_skills":"ابحث عن وظيفة تناسب مهارات اهتماماتك",
+    "find_the_perfect_jobs_employment_career_opportunities":"العثور على الوظائف المثالية لفرص العمل الوظيفي",
     "get_in_touch": "ابقى على تواصل",
     "subjects": "المواضيع",
     "message": "رسالة",
@@ -244,11 +246,11 @@
     "suggestion": "اقتراح",
     "new_jobs": "وظائف جديدة",
     "most_popular_vacancies": "الوظائف الشاغرة الأكثر شهرة",
-    "popular_category": "الفئة الشعبية",
+    "popular_category": "الفئة الشائعة",
     "view_all_jobs": "عرض جميع الوظائف",
     "working_process": "عملية العمل",
     "featured_job": "وظيفة مميزة",
-    "top": "قمة",
+    "top": "قائمة",
     "clients_testimonial": "شهادة العملاء",
     "job_details": "تفاصيل الوظيفة",
     "verified": "تم التحقق",
@@ -318,7 +320,7 @@
     "employers": "أرباب العمل",
     "post_a_job": "انشر وظيفة",
     "browse_employers": "تصفح أصحاب العمل",
-    "employers_dashboard": "لوحة القيادة لأصحاب العمل",
+    "employers_dashboard": "لوحة التحكم لأصحاب العمل",
     "support": "الدعم",
     "faqs": "الأسئلة الشائعة",
     "terms_condition": "الشروط والأحكام",
@@ -327,9 +329,16 @@
     "notifications": "إشعارات",
     "no_notification": "لا يوجد إشعارات",
     "view_all_notifications": "عرض جميع الإخطارات",
-    "create_account": "إصنع حساب",
+    "create_account": "انشئ حساب",
     "log_in": "تسجيل الدخول",
+    "create_account_description":"انشئ وصف لحسابك",
+    "upload_cv_resume":"حمل سيرتك الذاتية",
+    "upload_cv_resume_description":"انشئ وصف لسيرتك الذاتية",
     "payment": "دفع",
+    "find_suitable_job":"جد الوظيفة المناسبة",
+    "find_suitable_job_description":"جد وصف الوظيفة المناسب",
+    "apply_job":"تقدم للتوظيف",
+    "apply_job_description":"تطبيق الوصف الوظيفي",
     "paypal_payment": "الدفع باي بال",
     "stripe_payment": "دفع الشريط",
     "razor_payment": "دفع الحلاقة",
@@ -337,6 +346,8 @@
     "paystack_payment": "دفع Paystack",
     "flutterwave_payment": "دفع Flutterwave",
     "midtrans_payment": "الدفع Midtrans",
+    "we_are_highly_skilled_and_professionals_team":"نحن على درجة عالية من المهنية",
+    "who_we_are":"من نحن",
     "mollie_payment": "دفع مولي",
     "auto_payment": "الدفع التلقائي",
     "manual_payment": "الدفع اليدوي",
@@ -364,30 +375,34 @@
     "profession": "مهنة",
     "select_one": "حدد واحد",
     "birth_date": "تاريخ الميلاد",
+    "contact_title":"عنوان الاتصال",
+    "want_to_chat_We_love_to_hear_from_you_get_in_touch_with_our_customer_success_team_to_inquire_rates_or_just_say_hello":"نريد الدردشة نحب أن نسمع منك تواصل مع فريق نجاح العملاء لدينا للاستفسار عن الأسعار أو مجرد إلقاء التحية",
     "bio": "السيرة الذاتية",
     "candidate_list": "قائمة المرشحين",
     "email_verification": "تأكيد بواسطة البريد الالكتروني",
+    "we_care_about_customer_services":"نحن نهتم بخدمة العميل ",
     "website_language_switcher": "محوّل لغة الواجهة الأمامية",
     "employer_account_auto_activation": "التنشيط التلقائي لصاحب العمل",
-    "verify_your_email_before_accessing_dashboard": "تحقق من بريدك الإلكتروني قبل الوصول إلى لوحة القيادة",
+    "verify_your_email_before_accessing_dashboard": "تحقق من بريدك الإلكتروني قبل الوصول إلى لوحة التحكم",
     "not_verified": "لم يتم التحقق منه",
     "sort_by": "صنف حسب",
     "bookmark_jobs": "وظائف المرجعية",
-    "candidate_dashboard": "المرشح لوحة القيادة",
-    "employer_dashboard": "صاحب العمل لوحة القيادة",
+    "candidate_dashboard": "المرشح لوحة التحكم",
+    "employer_dashboard": "صاحب العمل لوحة التحكم",
     "overview": "ملخص",
     "my_profile": "ملفي",
-    "applied_jobs": "الوظائف التطبيقية",
+    "applied_jobs": "الوظائف المقدمة",
     "favorite_jobs": "الوظائف المفضلة",
-    "job_alert": "حالة تأهب وظيفة",
+    "job_alert": " اشعارات وظيفة",
     "log_out": "تسجيل خروج",
-    "date_applied": "تاريخ تطبيقها",
+    "date_applied": "تاريخ التقدم",
     "action": "عمل",
-    "cancel_application": "إلغاء التطبيق",
-    "already_applied": "تطبق بالفعل",
+    "cancel_application": "إلغاء التقدم",
+    "already_applied": "قدمتها بالفعل",
     "apply_now": "قدم الآن",
+    "your_cv_resume":"سيرتك الذاتية",
     "deadline_expired": "انتهى الموعد النهائي",
-    "job_applied": "وظيفة تطبيق",
+    "job_applied": "وظيفة مقدمة",
     "profile_in_title": "ملف التعريف الخاص بك غير مكتمل",
     "profile_in_description": "أكمل ملفك الشخصي قبل التقدم للوظائف ، أضف معلوماتك وسيرتك الذاتية وصورة ملفك الشخصي للحصول على فرصة أفضل للتوظيف",
     "edit_profile": "تعديل الملف الشخصي",
