--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -47,7 +47,7 @@
     "my_jobs": "وظائفي",
     "job_status": "حالة الوظيفة",
     "expired": "منتهي الصلاحية",
-    "apply_on": "تطبيق على",
+    "apply_on": "تقديم على",
     "app": "تطبيق",
     "email": "البريد الإلكتروني",
     "custom_url": "عنوان Url مخصص",
@@ -64,7 +64,7 @@
     "unpaid": "غير مدفوعة",
     "date": "تاريخ",
     "amount": "مقدار",
-    "post_job": "وظيفة بعد",
+    "post_job": "طرح وظيفة ",
     "job_category": "تصنيف الوظيفة",
     "vacancies": "الشواغر",
     "yes": "نعم",
@@ -151,17 +151,17 @@
     "married": "متزوج",
     "single": "غير مرتبطة",
     "biography": "سيرة شخصية",
-    "youtube": "موقع يوتيوب",
+    "youtube": "youtube ",
     "profile_url": "URL الملف الشخصي",
-    "facebook": "فيسبوك",
-    "twitter": "تويتر",
-    "linkedin": "ينكدين",
+    "facebook": "facebook",
+    "twitter": "twitter",
+    "linkedin": "linkedin",
     "locations": "المواقع",
     "country": "دولة",
     "state": "حالة",
     "city": "مدينة",
     "zip_code": "الرمز البريدي",
-    "address": "تبوك",
+    "address": "عنوان",
     "phone_number": "رقم الهاتف",
     "secondary_phone": "الهاتف الثانوي",
     "email_address": "عنوان البريد الالكترونى",
@@ -224,8 +224,8 @@
     "contact_sub_title": "العنوان الفرعي للاتصال",
     "contact_description": "وصف جهة الاتصال",
     "email_support": "البريد الالكترونى للدعم  ",
-    "find_job_that_suits_your_interest_skills":"ابحث عن وظيفة تناسب مهارات اهتماماتك",
-    "find_the_perfect_jobs_employment_career_opportunities":"العثور على الوظائف المثالية لفرص العمل الوظيفي",
+    "find_job_that_suits_your_interest_skills": "ابحث عن وظيفة تناسب مهارات اهتماماتك",
+    "find_the_perfect_jobs_employment_career_opportunities": "العثور على الوظائف المثالية لفرص العمل الوظيفي",
     "get_in_touch": "ابقى على تواصل",
     "subjects": "المواضيع",
     "message": "رسالة",
@@ -264,7 +264,7 @@
     "related_jobs": "الوظائف ذات الصلة",
     "all_category": "كل الفئات",
     "work_type": "نوع العمل",
-    "remote": "بعيد",
+    "remote": "عن بعد",
     "advance_filter": "مرشح متقدم",
     "sortby": "صنف حسب",
     "recommanded": "موصى به",
@@ -331,14 +331,14 @@
     "view_all_notifications": "عرض جميع الإخطارات",
     "create_account": "انشئ حساب",
     "log_in": "تسجيل الدخول",
-    "create_account_description":"انشئ وصف لحسابك",
-    "upload_cv_resume":"حمل سيرتك الذاتية",
-    "upload_cv_resume_description":"انشئ وصف لسيرتك الذاتية",
+    "create_account_description": "انشئ وصف لحسابك",
+    "upload_cv_resume": "حمل سيرتك الذاتية",
+    "upload_cv_resume_description": "انشئ وصف لسيرتك الذاتية",
     "payment": "دفع",
-    "find_suitable_job":"جد الوظيفة المناسبة",
-    "find_suitable_job_description":"جد وصف الوظيفة المناسب",
-    "apply_job":"تقدم للتوظيف",
-    "apply_job_description":"تطبيق الوصف الوظيفي",
+    "find_suitable_job": "جد الوظيفة المناسبة",
+    "find_suitable_job_description": "جد وصف الوظيفة المناسب",
+    "apply_job": "تقدم للتوظيف",
+    "apply_job_description": "تقديم الوصف الوظيفي",
     "paypal_payment": "الدفع باي بال",
     "stripe_payment": "دفع الشريط",
     "razor_payment": "دفع الحلاقة",
@@ -346,8 +346,8 @@
     "paystack_payment": "دفع Paystack",
     "flutterwave_payment": "دفع Flutterwave",
     "midtrans_payment": "الدفع Midtrans",
-    "we_are_highly_skilled_and_professionals_team":"نحن على درجة عالية من المهنية",
-    "who_we_are":"من نحن",
+    "we_are_highly_skilled_and_professionals_team": "نحن على درجة عالية من المهنية",
+    "who_we_are": "من نحن",
     "mollie_payment": "دفع مولي",
     "auto_payment": "الدفع التلقائي",
     "manual_payment": "الدفع اليدوي",
@@ -375,11 +375,11 @@
     "profession": "مهنة",
     "select_one": "حدد واحد",
     "birth_date": "تاريخ الميلاد",
-    "want_to_chat_We_love_to_hear_from_you_get_in_touch_with_our_customer_success_team_to_inquire_rates_or_just_say_hello":"نريد الدردشة نحب أن نسمع منك تواصل مع فريق نجاح العملاء لدينا للاستفسار عن الأسعار أو مجرد إلقاء التحية",
+    "want_to_chat_We_love_to_hear_from_you_get_in_touch_with_our_customer_success_team_to_inquire_rates_or_just_say_hello": "نريد الدردشة نحب أن نسمع منك تواصل مع فريق نجاح العملاء لدينا للاستفسار عن الأسعار أو مجرد إلقاء التحية",
     "bio": "السيرة الذاتية",
     "candidate_list": "قائمة المرشحين",
     "email_verification": "تأكيد بواسطة البريد الالكتروني",
-    "we_care_about_customer_services":"نحن نهتم بخدمة العميل ",
+    "we_care_about_customer_services": "نحن نهتم بخدمة العميل ",
     "website_language_switcher": "محوّل لغة الواجهة الأمامية",
     "employer_account_auto_activation": "التنشيط التلقائي لصاحب العمل",
     "verify_your_email_before_accessing_dashboard": "تحقق من بريدك الإلكتروني قبل الوصول إلى لوحة التحكم",
@@ -399,8 +399,8 @@
     "cancel_application": "إلغاء التقدم",
     "already_applied": "قدمتها بالفعل",
     "apply_now": "قدم الآن",
-    "your_cv_resume":"سيرتك الذاتية",
-    "deadline_expired": "انتهى الموعد النهائي",
+    "your_cv_resume": "سيرتك الذاتية",
+    "deadline_expired": " الموعد النهائي ",
     "job_applied": "وظيفة مقدمة",
     "profile_in_title": "ملف التعريف الخاص بك غير مكتمل",
     "profile_in_description": "أكمل ملفك الشخصي قبل التقدم للوظائف ، أضف معلوماتك وسيرتك الذاتية وصورة ملفك الشخصي للحصول على فرصة أفضل للتوظيف",
@@ -488,6 +488,12 @@
     "social_details": "التفاصيل الاجتماعية",
     "establishment_date": "تاريخ التأسيس",
     "vision": "رؤية",
+    "apply_job_on": "التقدم للوظيفة على",
+    "onn Darbi": "على دربي",
+    "external_platform": "منصة خارجية",
+    "on_your_email": "على الايميل ",
+    "candidate_will_apply_job_using Darbi&all_application_will_show_on_your_dashboard":"سيقدم المرشح وظيفة باستخدام دربي وستظهر جميع الطلبات على لوحة القيادة الخاصة بك",
+    "candidate_apply_job_on_your_website_all_application_on_your_own_website":"المرشح يقدم وظيفة على موقع الويب الخاص بك كل الطلبات على موقع الويب الخاص بك",
     "company_list": "قائمة الشركة",
     "contact_email": "تواصل بالبريد الاكتروني",
     "job_list": "قائمة الوظائف",
@@ -504,11 +510,12 @@
     "min_salary": "الحد الأدنى للراتب",
     "max_salary": "الحد الأقصى للراتب",
     "applicant_options": "خيارات مقدم الطلب",
-    "apply_url": "تطبيق Url",
+    "apply_url": " رابط التقديم",
     "apply_email": "تطبيق البريد الإلكتروني",
     "highlight": "تسليط الضوء",
     "profession_list": "قائمة المهنة",
     "are_you_sure_you_want_to_delete_this_item": "هل أنت متأكد أنك تريد حذف هذا البند ؟",
+    "candidate_apply_job_on_your_email_address_and_all_application_in_your_email":"يقدم المرشح وظيفة على عنوان بريدك الإلكتروني وجميع الطلبات في بريدك الإلكتروني.",
     "profile_picture": "الصوره الشخصيه",
     "updated_at": "تم التحديث في",
     "choose_file": "اختر ملف",
@@ -795,7 +802,7 @@
     "default_locale": "الإعدادات المحلية الافتراضية",
     "indeed_api": "في الواقع API",
     "affiliate_id": "الهوية التابعة",
-    "become_a_affiliate" : "كن تابعا",
+    "become_a_affiliate": "كن تابعا",
     "translate_language": "ترجمة اللغة",
     "please_wait_while_translating": "يرجى الانتظار أثناء الترجمة",
     "english_text": "الانجليزية النص",
@@ -896,5 +903,5 @@
     "exact_location_only": "الموقع الدقيق فقط",
     "within": "داخل",
     "miles": "اميال",
-    "sorry_for_the_inconvenience" : "Sorry For The Inconvenience"
+    "sorry_for_the_inconvenience": "Sorry For The Inconvenience"
 }
