--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -16,7 +16,7 @@
     "back": "خلف",
     "name": "اسم",
     "start_typing_for_search": "ابدأ الكتابة للبحث",
-    "create": "خلق",
+    "create": "انشاء",
     "update": "تحديث",
     "bookmarks": "إشارات مرجعية",
     "category": "فئة",
@@ -58,6 +58,7 @@
     "candidate_profile_view": "عرض الملف الشخصي للمرشحين",
     "remaining": "متبقي",
     "latest_invoice": "أحدث الفواتير",
+    "latest_users":"اخر المستخدمين",
     "payment_status": "حالة السداد",
     "mark_as_paid": "وضع علامة كمدفوع",
     "paid": "مدفوع",
@@ -106,7 +107,7 @@
     "account": "الحساب",
     "close_account": "حساب مغلق",
     "short_listed": "مدرج قصير",
-    "all_notification": "كل الإخطار",
+    "all_notification": "كل الاشعارات",
     "forget_password": "نسيت كلمة المرور",
     "keep_me_logged": "أبقني متصل",
     "employer": "صاحب العمل",
@@ -174,10 +175,10 @@
     "job_role": "الدور الوظيفي",
     "note_you_will_be_notified_for_this_role_only": "ملاحظة: سيتم إخطارك بهذا الدور فقط",
     "enter_city": "أدخل المدينة",
-    "profile_privacy": "الملف الخصوصية",
+    "profile_privacy": "ملف الخصوصية",
     "public": "عام",
     "private": "خاص",
-    "enter": "يدخل",
+    "enter": "ادخل",
     "your_profile_is": "ملفك الشخصي هو",
     "now": "حاليا",
     "resume_privacy": "استئناف الخصوصية",
@@ -201,7 +202,7 @@
     "details": "تفاصيل",
     "home": "الرئيسية",
     "share_this_profile": "مشاركة الملف التعريفي",
-    "pinterest": "بينتيريست",
+    "pinterest": "pinterest",
     "contact_information": "معلومات التواصل",
     "social_profile": "الملف الاجتماعي",
     "find_employers": "ابحث عن أصحاب العمل",
@@ -224,7 +225,7 @@
     "contact_sub_title": "العنوان الفرعي للاتصال",
     "contact_description": "وصف جهة الاتصال",
     "email_support": "البريد الالكترونى للدعم  ",
-    "find_job_that_suits_your_interest_skills": "ابحث عن وظيفة تناسب مهارات اهتماماتك",
+    "find_job_that_suits_your_interest_skills": "ابحث عن وظيفة تناسب مهاراتك و اهتماماتك",
     "find_the_perfect_jobs_employment_career_opportunities": "العثور على الوظائف المثالية لفرص العمل الوظيفي",
     "get_in_touch": "ابقى على تواصل",
     "subjects": "المواضيع",
@@ -308,7 +309,7 @@
     "choose_plan_description": "اختر وصف الخطة",
     "post": "بريد",
     "jobs": "وظائف",
-    "highlights_job": "يسلط الضوء على الوظيفة",
+    "highlights_job": "سلط الضوء على الوظيفة",
     "get_started": "البدء",
     "privacy_policy": "سياسة الخصوصية",
     "terms_conditions": "البنود و الظروف",
@@ -395,7 +396,7 @@
     "job_alert": " اشعارات وظيفة",
     "log_out": "تسجيل خروج",
     "date_applied": "تاريخ التقدم",
-    "action": "عمل",
+    "action": "اجراء",
     "cancel_application": "إلغاء التقدم",
     "already_applied": "قدمتها بالفعل",
     "apply_now": "قدم الآن",
@@ -735,7 +736,7 @@
     "pending_jobs": "وظائف معلقة",
     "all_jobs": "جميع الوظائف",
     "your_earnings_overview_of_this_year": "نظرة عامة على أرباحك لهذا العام",
-    "popular_location": "موقع شعبي",
+    "popular_location": "موقع شائع",
     "recently_published_jobs": "الوظائف المنشورة حديثاً",
     "view_all_candidates": "عرض جميع المرشحين",
     "view_all_company": "عرض كل شركة",
@@ -749,8 +750,8 @@
     "company_name": "اسم الشركة",
     "save_next": "حفظ & التالي",
     "previous": "سابق",
-    "select": "يختار",
-    "view_dashboard": "مشاهدة لوحة القيادة",
+    "select": "اسختار",
+    "view_dashboard": "مشاهدة لوحة التحكم",
     "found_in_this_page": "وجدت في هذه الصفحة",
     "there_is_no": "لا يوجد",
     "add_your_first": "أضف ملفك الأول",
