--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -366,7 +366,7 @@
     "sign_in": "تسجيل الدخول",
     "create_candidate": "إنشاء مرشح",
     "edit_candidate": "تحرير المرشح",
-    "save": "يحفظ",
+    "save": "حفظ",
     "account_details": "تفاصيل الحساب",
     "image": "صورة",
     "files": "Files",
