delete help wedget

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -23,14 +23,14 @@
     "send_mail": "ارسل بريد الكتروني",
     "hello": "مرحبًا",
     "city_list": "قائمة المدينة",
-    "dashboard": "لوحة القيادة",
+    "dashboard": "لوحة التحكم",
     "here_is_your_daily_activities_career_opportunities": "هذه هي أنشطتك اليومية وفرصك الوظيفية",
     "open_job": "افتح الوظيفة",
     "saved_candidate": "المرشح المحفوظ",
     "active_jobs": "الوظائف النشطة",
     "highlight_jobs": "تسليط الضوء على الوظائف",
     "featured_jobs": "وظائف مميزة",
-    "profile_view": "عرض الملف الشخصي",
+    "profile_view": "زيارة الملف الشخصي",
     "view_all": "مشاهدة الكل",
     "job": "مهنة",
     "status": "حالة",
@@ -105,13 +105,13 @@
     "delete": "حذف",
     "clone": "استنساخ",
     "account": "الحساب",
-    "close_account": "حساب مغلق",
+    "close_account": " الغاء الحساب",
     "short_listed": "مدرج قصير",
     "all_notification": "كل الاشعارات",
     "forget_password": "نسيت كلمة المرور",
     "keep_me_logged": "أبقني متصل",
     "employer": "صاحب العمل",
-    "register": "يسجل",
+    "register": "تسجيل ",
     "login": "تسجيل الدخول",
     "login_with_google": "تسجيل الدخول عبر جوجل",
     "login_with_facebook": "تسجيل الدخول باستخدام الفيسبوك",
@@ -475,8 +475,8 @@
     "plan_details": "تفاصيل الخطة",
     "price": "سعر",
     "plan_benefits": "فوائد الخطة",
-    "job_limit": "حد العمل",
-    "featured_job_limit": "حد العمل المميز",
+    "job_limit": "حد الوظائف",
+    "featured_job_limit": "حد الوظائف المميز",
     "highlight_job_limit": "تسليط الضوء على حد العمل",
     "candidate_cv_preview_limit": "حد معاينة السيرة الذاتية للمرشح",
     "times": "مرات",
@@ -493,7 +493,7 @@
     "onn Darbi": "على دربي",
     "external_platform": "منصة خارجية",
     "on_your_email": "على الايميل ",
-    "candidate_will_apply_job_using Darbi&all_application_will_show_on_your_dashboard":"سيقدم المرشح وظيفة باستخدام دربي وستظهر جميع الطلبات على لوحة القيادة الخاصة بك",
+    "candidate_will_apply_job_using Darbi&all_application_will_show_on_your_dashboard":"سيقدم المرشح وظيفة باستخدام دربي وستظهر جميع الطلبات على لوحة التحكم الخاصة بك",
     "candidate_apply_job_on_your_website_all_application_on_your_own_website":"المرشح يقدم وظيفة على موقع الويب الخاص بك كل الطلبات على موقع الويب الخاص بك",
     "company_list": "قائمة الشركة",
     "contact_email": "تواصل بالبريد الاكتروني",
@@ -850,6 +850,7 @@
     "filter_by": "مصنف بواسطة",
     "view_job": "مشاهدة الوظيفة",
     "congratulation": "تهانينا",
+    "congratulation_your_profile_is_complete":"تهانينا ملفك الشخصي اصبح جاهزا",
     "your_job_creation_is_complete": "اكتمل إنشاء عملك",
     "do_you_want_to_promote_your_job": "هل تريد الترويج لعملك؟",
     "on_the_top": "بالقمة",
