--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -53,7 +53,7 @@
     "custom_url": "عنوان Url مخصص",
     "plan": "يخطط",
     "create_plan": "الخطة الحالية",
-    "upgrade_plan": "خطة الترقية",
+    "upgrade_plan": "ترقية الخطة",
     "create_plan_benefits": "مزايا الخطة الحالية",
     "candidate_profile_view": "عرض الملف الشخصي للمرشحين",
     "remaining": "متبقي",
@@ -101,7 +101,7 @@
     "phone": "هاتف",
     "change_password": "غير كلمة السر",
     "registered_at": "مسجل فى",
-    "close": "قريب",
+    "close": "الغاء ",
     "delete": "حذف",
     "clone": "استنساخ",
     "account": "الحساب",
@@ -128,7 +128,7 @@
     "i_have_read_and_agree_with": "I've read and agree with",
     "terms_of_service": "شروط الخدمة",
     "employer_or_candidate": "صاحب عمل أم مرشح؟",
-    "open_jobs_waiting_for_you": "فتح وظائف في انتظارك",
+    "open_jobs_waiting_for_you": "وظائف مفتوحة في انتظارك ",
     "we_have_sent_an_verification_to_your_email_address_click_the_to_verify_your_email_address_and_activate_your_account": "لقد أرسلنا تأكيدًا إلى عنوان بريدك الإلكتروني. انقر فوق للتحقق من عنوان بريدك الإلكتروني وتنشيط حسابك",
     "verify_email_address": "التحقق من عنوان البريد الإلكتروني",
     "resend_link": "إعادة إرسال الارتباط",
@@ -232,7 +232,7 @@
     "message": "رسالة",
     "send_message": "أرسل رسالة",
     "employer_details": "تفاصيل صاحب العمل",
-    "open_position": "فتح المركز",
+    "open_position": "فتح المنصب",
     "company_description": "وصف الشركة",
     "founded_in": "أسس في",
     "company_size": "حجم الشركة",
@@ -266,8 +266,10 @@
     "all_category": "كل الفئات",
     "work_type": "نوع العمل",
     "remote": "عن بعد",
-    "advance_filter": "مرشح متقدم",
+    "advance_filter": " تصفية",
     "sortby": "صنف حسب",
+    "congratulations_you_profile_is_complete":"تهانينا ملفك الشخصي اصبح جاهزا",
+    "now_you_can_start_using_your_account_you_can_post_job_purchase_plan_for_upcoming_job_and_many_more_enjoy !":"الآن يمكنك البدء في استخدام حسابك ، يمكنك نشر خطة شراء وظيفة للوظيفة القادمة والكثير  استمتع!",
     "recommanded": "موصى به",
     "jobs_from_our_partner_site": "وظائف من موقع شركائنا",
     "jobs_by": "وظائف من قبل",
@@ -296,17 +298,18 @@
     "write_a_reply": "اكتب ردًا",
     "share_your_thoughts_on_this_comment": "شارك أفكارك حول هذا التعليق",
     "post_a_reply": "اكتب ردا",
-    "cancel": "يلغي",
+    "cancel": "الغاء",
     "no_comments": "لا تعليق",
     "blog": "مقالات",
     "search": "يبحث",
+    "choose_resume ":"اختر السيرة الذاتية",
     "recent_post": "المنشور الاخير",
     "comment": "تعليق",
     "result_found_for": "تم العثور على نتيجة ل",
     "read_more": "اقرأ أكثر",
     "pricing": "التسعير",
     "choose_plan": "اختر خطة",
-    "choose_plan_description": "اختر وصف الخطة",
+    "choose_plan_description": "اختر  الخطة",
     "post": "بريد",
     "jobs": "وظائف",
     "highlights_job": "سلط الضوء على الوظيفة",
@@ -678,13 +681,13 @@
     "account_complete": "اكتمل الحساب",
     "home_title": "عنوان المنزل",
     "home_sub_title": "الصفحة الرئيسية العنوان الفرعي",
-    "banner_image": "صورة بانر",
+    "banner_image": "لافتة ",
     "about_page": "حول الصفحة",
     "about_title": "حول العنوان",
     "about_sub_title": "حول العنوان الفرعي",
     "about_description": "حول الوصف",
     "about_brand_logo": "حول شعار العلامة التجارية",
-    "about_banner_image": "حول صورة البانر",
+    "about_banner_image": "حول اللافتة ",
     "our_mission": "مهمتنا",
     "mission_title": "عنوان المهمة",
     "mission_sub_title": "عنوان المهمة الفرعي",
@@ -746,6 +749,7 @@
     "completed": "مكتمل",
     "supported_format": "التنسيق المدعوم",
     "upload_banner": "تحميل لافتة",
+    "logo_banner_image":"الشعار واللافتة/ الغلاف",
     "company_information": "معلومات الشركة",
     "company_name": "اسم الشركة",
     "save_next": "حفظ & التالي",
