--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -413,7 +413,7 @@
     "browse_job": "تصفح الوظيفة",
     "dark_logo": "شعار غامق",
     "light_logo": "شعار خفيف",
-    "order": "ترتيب",
+    "order": "طلب",
     "order_no": "رقم الطلب",
     "company": "شركة",
     "account_activation": "تفعيل الحساب",
@@ -539,7 +539,7 @@
     "nav_color": "لون التنقل",
     "cookies_settings": "إعدادات ملفات تعريف الارتباط",
     "allow_cookies_consent": "السماح بالموافقة على ملفات تعريف الارتباط؟",
-    "no": "رقم",
+    "no": "لا",
     "allow_cookies": "السماح للكوكيز",
     "cookie_name": "اسم ملف تعريف الارتباط",
     "gdpr_cookie": "ملف تعريف الارتباط الخاص باللائحة العامة لحماية البيانات (GDPR)",
@@ -550,8 +550,8 @@
     "force_consent": "فرض الموافقة؟",
     "dark": "مظلم",
     "light": "خفيفة",
-    "approve_button_text": "الموافقة على نص الزر",
-    "reject_button_text": "أدخل نص زر الموافقة",
+    "approve_button_text": "  ادخل نص زر الموافقة",
+    "reject_button_text": "أدخل نص زر الرفض",
     "header_custom_style_before_head_end": "نمط رأس مخصص (قبل نهاية الرأس)",
     "write_style_with_style_tag_like": "اكتب أسلوبًا بعلامة نمط مثل",
     "header_custom_script_before_head_end": "البرنامج النصي المخصص للرأس (قبل نهاية الرأس)",
@@ -805,9 +805,9 @@
     "affiliate_setting": "إعداد الشركة التابعة",
     "carrerjet_api": "Careerjet API",
     "default_locale": "الإعدادات المحلية الافتراضية",
-    "indeed_api": "في الواقع API",
+    "indeed_api": "indeed api",
     "affiliate_id": "الهوية التابعة",
-    "become_a_affiliate": "كن تابعا",
+    "become_a_affiliate": " انتسب الى",
     "translate_language": "ترجمة اللغة",
     "please_wait_while_translating": "يرجى الانتظار أثناء الترجمة",
     "english_text": "الانجليزية النص",
