--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -589,7 +589,7 @@
     "send_test_mail": "إرسال بريد تجريبي",
     "payment_gateway_setting": "إعداد بوابة الدفع",
     "paypal_settings": "إعدادات Paypal",
-    "live_mode": "وضع الحية",
+    "live_mode": "وضع مباشر",
     "client_id": "معرف العميل",
     "client_secret": "سر العميل",
     "stripe_settings": "إعدادات الشريط",
@@ -783,7 +783,7 @@
     "code": "شفرة",
     "position": "موقع",
     "left": "اليسار",
-    "right": "الصحيح",
+    "right": "اليمين ",
     "currency_example": "مثال العملة",
     "headphone": "سماعة",
     "currency_list": "قائمة العملات",
@@ -816,7 +816,7 @@
     "translating": "جار الترجمة",
     "select_state": "اختر ولايه",
     "country_list": "قائمة الدول",
-    "clear": "صافي",
+    "clear": "مسح",
     "states_count": "عدد الدول",
     "country_wise_states": "الدول الحكيمة",
     "city_count": "عدد المدن",
