--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -115,7 +115,7 @@
     "login": "تسجيل الدخول",
     "login_with_google": "تسجيل الدخول عبر جوجل",
     "login_with_facebook": "تسجيل الدخول باستخدام الفيسبوك",
-    "login_with_twitter": "تسجيل الدخول مع Twitter",
+    "login_with_twitter": "تسجيل الدخول مع تويتر",
     "login_with_linkedin": "تسجيل الدخول مع لينكد إن",
     "login_with_github": "تسجيل الدخول مع جيثب",
     "signup_with_google": "اشترك مع جوجل",
@@ -150,7 +150,7 @@
     "other": "آخر",
     "marital_status": "الحالة الحالة الإجتماعية",
     "married": "متزوج",
-    "single": "غير مرتبطة",
+    "single": "اعزب ",
     "biography": "سيرة شخصية",
     "youtube": "youtube ",
     "profile_url": "URL الملف الشخصي",
@@ -213,7 +213,7 @@
     "latest": "آخر",
     "per_page": "لكل صفحة",
     "candidate_image": "صورة المرشح",
-    "view_resume": "مشاهدة ملف Resume",
+    "view_resume": "مشاهدة السيرة الذاتية ",
     "years_experience": "سنوات خبرة",
     "view_profile": "عرض الصفحة الشخصية",
     "save_to": "حفظ في",
@@ -226,7 +226,7 @@
     "contact_description": "وصف جهة الاتصال",
     "email_support": "البريد الالكترونى للدعم  ",
     "find_job_that_suits_your_interest_skills": "ابحث عن وظيفة تناسب مهاراتك و اهتماماتك",
-    "find_the_perfect_jobs_employment_career_opportunities": "العثور على الوظائف المثالية لفرص العمل الوظيفي",
+    "find_the_perfect_jobs_employment_career_opportunities": "    العثور على فرص عمل مثالية للتوظيف  ",
     "get_in_touch": "ابقى على تواصل",
     "subjects": "المواضيع",
     "message": "رسالة",
@@ -241,7 +241,7 @@
     "company_title_keyword": "الكلمات الرئيسية لعنوان الشركة",
     "all_country": "كل البلاد",
     "all_state": "كل دولة",
-    "no_open_position": "لا يوجد موقف مفتوح",
+    "no_open_position": "لا يوجد منصب مفتوح",
     "faq": "التعليمات",
     "job_title_keyword": "المسمى الوظيفي ، الكلمة الرئيسية",
     "suggestion": "اقتراح",
@@ -277,18 +277,18 @@
     "online_payment_gatewats": "بوابات الدفع عبر الإنترنت",
     "manual_payment_gateways": "بوابات الدفع اليدوي",
     "confirm_payment": "تأكيد الدفع",
-    "paypal": "باي بال",
+    "paypal": " paypal",
     "pay_now": "ادفع الآن",
-    "stripe": "شريط",
-    "razorpay": "رازورباي",
+    "stripe": "stripe",
+    "razorpay": "razorpay",
     "paystack": "Paystack",
     "flutterwave": "Flutterwave",
-    "mollie": "مولي",
-    "sslcommerz": "كومرز SSL",
+    "mollie": "mollie",
+    "sslcommerz": " SSL commerz",
     "instamojo": "instamojo",
-    "midtrans": "ميدترانس",
+    "midtrans": "midtrans",
     "offline": "غير متصل على الانترنت",
-    "blog_deatils": "مدونة deatilus",
+    "blog_deatils": "تفاصيل المدونة  ",
     "comments": "تعليقات",
     "share_this_job": "شارك هذه الوظيفة",
     "write_a_comment": "أكتب تعليقا",
@@ -570,7 +570,7 @@
     "off": "إيقاف",
     "set_default_language": "تعيين اللغة الافتراضية",
     "recommended": "مُستَحسَن",
-    "on": "على",
+    "on": "تشغيل",
     "set_default_currency": "تعيين العملة الافتراضية",
     "layout_settings": "إعدادات الشكل الظاهري",
     "left_navigation_layout": "تخطيط التنقل الأيسر",
@@ -788,7 +788,7 @@
     "headphone": "سماعة",
     "currency_list": "قائمة العملات",
     "symbol": "رمز",
-    "default": "تقصير",
+    "default": "افتراضي",
     "faq_category_list": "قائمة فئات الأسئلة الشائعة",
     "question": "سؤال",
     "recent_jobs": "الوظائف الحديثة",
