--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -44,6 +44,8 @@
     "delete_job": "حذف الوظيفة",
     "edit_job": "تحرير الوظيفة",
     "job_title": "مسمى وظيفي",
+    "our_website_is_under_construction":"موقعنا تحت الصيانة",
+    "we_are_working_hard_to_make_our_website_ready_for_you_we_will_be_back_soon":"نحن نعمل جاهدين لجعل موقعنا جاهزًا لك وسنعود قريبًا",
     "my_jobs": "وظائفي",
     "job_status": "حالة الوظيفة",
     "expired": "منتهي الصلاحية",
@@ -117,12 +119,12 @@
     "login_with_facebook": "تسجيل الدخول باستخدام الفيسبوك",
     "login_with_twitter": "تسجيل الدخول مع تويتر",
     "login_with_linkedin": "تسجيل الدخول مع لينكد إن",
-    "login_with_github": "تسجيل الدخول مع جيثب",
+    "login_with_github": "تسجيل الدخول مع github",
     "signup_with_google": "اشترك مع جوجل",
     "signup_with_facebook": "اشترك عبر حساب فايسبوك",
     "signup_with_twitter": "اشترك مع تويتر",
     "signup_with_linkedin": "اشترك مع لينكد إن",
-    "signup_with_github": "سجل مع جيثب",
+    "signup_with_github": "سجل مع github",
     "already_have_account": "هل لديك حساب؟",
     "dont_have_account": "Don't have an account?",
     "i_have_read_and_agree_with": "I've read and agree with",
@@ -422,7 +424,7 @@
     "price_plan": "خطة الأسعار",
     "attributes": "Attributes",
     "professions": "المهن",
-    "others": "آحرون",
+    "others": "آخرون",
     "newsletter": "النشرة الإخبارية",
     "email_list": "قائمة البريد الالكتروني",
     "contacts": "جهات الاتصال",
@@ -549,7 +551,7 @@
     "enter_cookie_expiration_day": "أدخل يوم انتهاء صلاحية ملف تعريف الارتباط",
     "force_consent": "فرض الموافقة؟",
     "dark": "مظلم",
-    "light": "خفيفة",
+    "light": "فاتحة",
     "approve_button_text": "  ادخل نص زر الموافقة",
     "reject_button_text": "أدخل نص زر الرفض",
     "header_custom_style_before_head_end": "نمط رأس مخصص (قبل نهاية الرأس)",
@@ -637,9 +639,9 @@
     "linkedin_login_credential": "بيانات اعتماد تسجيل الدخول لينكد إن",
     "linkedin_client_id": "معرف عميل لينكد إن",
     "linkedin_client_secret": "سر عميل لينكد إن",
-    "github_login_credential": "بيانات اعتماد تسجيل الدخول إلى جيثب",
-    "github_client_id": "معرف عميل جيثب",
-    "github_client_secret": "سر عميل جيثب",
+    "github_login_credential": "بيانات اعتماد تسجيل الدخول إلى github",
+    "github_client_id": "معرف عميل github",
+    "github_client_secret": "سر عميل github",
     "system_timezone": "المنطقة الزمنية للنظام",
     "are_you_sure": "هل أنت واثق ؟",
     "comming_soon_mode": "قريبا الوضع",
@@ -697,7 +699,7 @@
     "map_address": "عنوان الخريطة",
     "login_page": "صفحة تسجيل الدخول",
     "register_page": "صفحة التسجيل",
-    "register_image": "تسجيل الصورة",
+    "register_image": "صورة التسجيل ",
     "page": "صفحة",
     "error_title": "عنوان الخطأ",
     "error_type": "نوع الخطأ",
