--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -15,9 +15,22 @@
     "bookmark_category": "فئة المرجعية",
     "back": "خلف",
     "name": "اسم",
+    "start_date":"تاريخ البداية",
+    "end_date":" تاريخ النهاية",
+    "org_name":" اسم المنظمة /الشركة",
+    "work_city":"  مدينة العمل ",
+    "ex_end_date":"تاريخ نهاية الخبرة",
+    "ex_start_date":"  تاريخ بداية الخبرة",
     "start_typing_for_search": "ابدأ الكتابة للبحث",
     "create": "انشاء",
     "update": "تحديث",
+    "intermediate": "متوسط",
+    "advanced": "متقدم",
+    "language_level": "مستوى اللغة",
+    "reference_name": "اسم المرجع",
+    "reference_position": "منصب المرجع ",
+    "reference_mobile": "هاتف المرجع",
+    "reference_address": "عنوان المرجع",
     "bookmarks": "إشارات مرجعية",
     "category": "فئة",
     "send_mail": "ارسل بريد الكتروني",
@@ -783,7 +796,7 @@
     "create_currency": "أنشئ عملة",
     "edit_currency": "تحرير العملة",
     "code": "شفرة",
-    "position": "موقع",
+    "position": "منصب",
     "left": "اليسار",
     "right": "اليمين ",
     "currency_example": "مثال العملة",
