--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -37,6 +37,17 @@
     "status": "Status",
     "days_remaining": "Days Remaining",
     "active": "Active",
+    "start_date":"start date",
+    "end_date":"end date",
+    "org_name":"Organization name",
+    "work_city":"  work city",
+    "ex_end_date":"experience end date",
+    "ex_start_date":"experience start date",
+   " language_level": " language level",
+    "reference_name": "reference name ",
+    "reference_position": "reference position  ",
+    "reference_mobile": "reference mobile ",
+    "reference_address": " reference address",
     "pending": "Pending",
     "job_expire": "Job Expire",
     "view_applications": "View Applications",
